wp-content/themes/zerif-lite/style.css
/* ... */
#hero {
	/*height: 270px;*/
	overflow: hidden;
	position: relative;
	display: inline-block;
}
#hero img {
	/*min-height:270px;*/
}

#hero .hero-title {
	position: absolute;
	top: 0;
	width: 100%;
	font-size: 44px;
	color: #fff;
	text-transform: uppercase;
	vertical-align: middle;
	/*line-height: 270px;*/
	margin-top: 12%;
}

.hero-content {
	padding-top: 0;
}

 /*---------------------------------------
 **   10.1 Posts and pages                   -----
-----------------------------------------*/
.sticky {
}
.hentry {
	margin: 0 0 1.5em;
}
.byline,
.updated {
	display: none;
}
.single .byline,
.group-blog .byline {
	display: none;
}
.entry-meta-large .byline,
.entry-meta-large .updated {
	display: none;
}
.page-content,
.entry-content,
.entry-summary {
	margin: 1.5em 0 0;
}
.page-links {
	clear: both;
	margin: 0 0 1.5em;
}
.page-header{
	text-align: left;
	border-bottom: none;
	margin: 0px 0 40px;
}
.search-results .page-header {
	margin: 0px 0 40px;
}
.page-header .page-title{
	position: relative;
}
.page-header .page-title:before{
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 35%;
	height: 2px;
	background: #e9e9e9;
	bottom: -9px;
	left: 0;
}
.taxonomy-description{
	margin-top:  15px;
}
.entry-title{
	position: relative;
}
.entry-title:before {
	position: absolute;
	margin: auto;
	z-index: 1;
	content: "";
	width: 10%;
	height: 2px;
	background: #615b79;
	bottom: -9px;
	left: 0;
}
.entry-meta{
	margin-top: 10px;
}
.content-area .entry-header {
	overflow: hidden;
}

 /*---------------------------------------
 **   10.2 Asides                   -----
-----------------------------------------*/
.blog .format-aside .entry-title,
.archive .format-aside .entry-title {
	display: none;
}
 /*---------------------------------------
 **   10.3 Comments                   -----
-----------------------------------------*/
.comment {
	list-style:none;
	margin-top:10px;
	margin-bottom:10px;
}
.comment a {
	color:#c7254e;
}
.comment-body {
	text-align: left;
	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
	padding-bottom: 10px;
	position: relative;
	padding-left: 40px;
}
.comment-content a {
	word-wrap: break-word;
}
.bypostauthor {
}
.comment-form, .comments-title, .comment-reply-title {
	text-align:left;
}
.comment .reply a {
	font-size: 12px;
}
.comment-form p {
	margin:10px 10px 10px 0;
}
.comment-form  label {
	width:85px;
}
.comments-title {
	font-size:20px;
	margin-bottom:20px;
}
.comment-list {
	margin-left:0px;
}
.comment-list li{
	list-style: none;
	float: left;
	width: 100%;
}
.comment-reply-link {
	border: 1px solid #ccc;
	border-radius: 3px;
	font-size: 1.2rem;
	line-height: 1;
	padding: .6em 1em .4em;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
	font-family: sans-serif;
	box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
	box-shadow: none;
	text-shadow: none;
	padding: 3px 5px;
	position: absolute;
	top: 0;
	right: 0;
}
.comment-form #submit, .comment-reply-link {
	background:#615b79;
	border-color:#615b79;
	color:#fff !important;
}
.comment-form #submit:hover,
.comment-form #submit:focus,
.comment-form #submit:active {

	background: #4b485e;
}
.comment-meta{

	margin-top: 0 !important;
	padding-top: 0 !important;
}
.comment-metadata{
	position: absolute;
	top: -2px;
	right: 55px;
}
.comment-metadata,
.comment-metadata a{
	color: #888;
	font-style: italic;
	font-size: 12px;
	padding: 3px 0px;
}
.comment-reply-link:hover{
	background: #4b485e;
	box-shadow: none;
}
.comment-author img{
	border-radius: 50%;
	position: absolute;
	left: 0;
}
.comment-author b.fn{
	color: #000;
}
 /*---------------------------------------
 **   11.0 Infinite scroll                    -----
-----------------------------------------*/
/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .paging-navigation, /* Older / Newer Posts Navigation (always hidden) */
.infinite-scroll.neverending .site-footer { /* Theme Footer (when set to scrolling) */
	display: none;
}
/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */
.infinity-end.neverending .site-footer {
	display: block;
}
 /*---------------------------------------
 **   12.0 Media                    -----
-----------------------------------------*/
.page-content img.wp-smiley,
.entry-content img.wp-smiley,
.comment-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}
.wp-caption {
	border: 1px solid #ccc;
	margin-bottom: 1.5em;
	max-width: 100%;
}
.wp-caption img[class*="wp-image-"] {
	display: block;
	margin: 1.2% auto 0;
	max-width: 98%;
}
.wp-caption-text {
	text-align: center;
}
.wp-caption .wp-caption-text {
	margin: 0.8075em 1.2%;
}
.site-main .gallery {
	margin-bottom: 1.5em;
}
.gallery-caption {
}
.site-main .gallery a img {
	border: none;
	height: auto;
	max-width: 90%;
}
.site-main .gallery dd,
.site-main .gallery figcaption {
	margin: 0;
}
.site-main .gallery-columns-4 .gallery-item {
}
.site-main .gallery-columns-4 .gallery-item img {
}
/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}
 /*---------------------------------------
 **   6.5 Gallery                    -----
-----------------------------------------*/
.gallery {
	margin-bottom: 20px;
}
.gallery-item {
	float: left;
	margin: 0 4px 4px 0;
	overflow: hidden;
	position: relative;
}
.gallery-columns-1 .gallery-item {
	max-width: 100%;
}
.gallery-columns-2 .gallery-item {
	max-width: 48%;
	max-width: -webkit-calc(50% - 4px);
	max-width:         calc(50% - 4px);
}
.gallery-columns-3 .gallery-item {
	max-width: 32%;
	max-width: -webkit-calc(33.3% - 4px);
	max-width:         calc(33.3% - 4px);
}
.gallery-columns-4 .gallery-item {
	max-width: 23%;
	max-width: -webkit-calc(25% - 4px);
	max-width:         calc(25% - 4px);
}
/* ... */

